@@ -1,0 +1,8 @@
+list(APPEND ugfx_INCLUDE_DIRS
+    ${CMAKE_CURRENT_LIST_DIR}
+)
+
+list(APPEND ugfx_SOURCES
+    ${CMAKE_CURRENT_LIST_DIR}/gdisp_lld_CH1115.c
+)
+
