@@ -1,0 +1,3 @@
+GFXINC += $(GFXLIB)/drivers/gdisp/CH1115
+GFXSRC += $(GFXLIB)/drivers/gdisp/CH1115/gdisp_lld_CH1115.c
+
