@@ -33,6 +33,7 @@ FIX:        Add missing driver.mk to SSD1322 driver.
 FEATURE:    LGDP4532 driver improvements.
 FIX:        Win32 Keyboard driver now retrieves lock key states on window activate
 FEATURE:    Add SSD1312 GDISP driver
+FEATURE:    Add CH1115 GDISP driver
 
 
 *** Release 2.9 ***
